Correct the spacing for the middle block

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -14,22 +14,32 @@ body {
 .title {
   background: #e3f4ff;
   font-size: 16px;
-
-  margin: 8px;
+  padding: 8px;
+  border: 8px solid white;
+  margin: 0;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
+  padding: 8px;
+  border-left: 8px solid white;
+  border-right: 8px solid white;
+  margin: 0;
+
 }
 
 .button-container {
   background: #e3f4ff;
-  margin: 8px;
+  padding: 8px;
+  border: 8px solid white;
+  text-align: center;
+  margin: 0;
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
+  margin-top: 8px;
+  margin-bottom: 8px;
+
 
 }
